2006-04-17  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile: Modified to have EtoileMenuServer installed in 'System' 
    rather than 'Local'.

2006-03-04  Saso Kiselkov <diablos@manga.sk>

    Update based on 2006-03-04 21:03 version.
    * MenuBarHeight.h:
    * SystemBarEntries/AboutEtoileEntry/AboutEtoileEntry.h:
    * SystemBarEntries/AboutEtoileEntry/AboutEtoileEntry.m:
    * SystemBarEntries/AboutEtoileEntry/GNUmakefile:
    * SystemBarEntries/AboutEtoileEntry/English.lproj/AboutEtoileEntry.gorm:
    * EtoileSystemBarEntry.h:
    Added.
    * MenuBarView.m:
    * GNUmakefile:
    * MenuletLoader.m:
    * Images/EtoileLogoH.tiff:
    * Images/EtoileLogo.tiff:
    * Controller.h:
    * MenuBarView.h:
    * GNUmakefile.postamble:
    * Controller.m:
    Updated.

2006-03-04  Saso Kiselkov <diablos@manga.sk>

    * BundleExtensionLoader.h:
    * BundleExtensionLoader.m:
    * ChangeLog:
    * Controller.h:
    * Controller.m:
    * EtoileMenulet.h:
    * GNUmakefile:
    * GNUmakefile.postamble:
    * GNUmakefile.preamble:
    * Images/EtoileLogoH.tiff:
    * Images/EtoileLogo.tiff:
    * Images/MenuBarFiller.tiff:
    * Images/MenuBarLeftEdge.tiff:
    * Images/MenuBarRightEdge.tiff:
    * main.m:
    * MenuBarView.h:
    * MenuBarView.m:
    * MenuBarWindow.h:
    * MenuBarWindow.m:
    * MenuletLoader.h:
    * MenuletLoader.m:
    * Menulets/ClockMenulet/ClockMenulet.h:
    * Menulets/ClockMenulet/ClockMenulet.m:
    * Menulets/ClockMenulet/GNUmakefile:
    * README:
    Initial import for Etoile MenuServer written by Saso Kiselkov (the other
    part of the menu bar support will be imported in Etoile/Bundles by updating
    WildMenus). 2006-03-03 22:40 version.